--- a/index3.htm
+++ b/index3.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv="refresh" content="0; URL='http://gaozhiyan.com/blog'" />
+<html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
