--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Zhiyan Gao 高志晏 /ʈʂʐ jɛn kaʊ/</title>
+		<title>Zhiyan Gao 高志晏</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -29,7 +29,9 @@
                      
 								<li><a href="http://gaozhiyan.wordpress.com" class="icon fa-wordpress" target="_blank"><span class="label">Blog</span></a>Blog</li>
 								<li><a href="https://drive.google.com/file/d/0B1bQr5XDSLRSa29tN05JakhLems/view?usp=sharing" class="icon fa-file-pdf-o" target="_blank"><span class="label"></span></a>CV</li>
-                                <li><a href="#" class="icon fa-bar-chart-o"></a><h2>Projects</h2></li>
+                                				<li><a href="#" class="icon fa-bar-chart-o"></a><h2>Projects</h2></li>
+							</ul>
+							<ul>
 								<li><a href="https://www.linkedin.com/pub/zhiyan-gao/18/aa9/7bb" class="icon fa-linkedin" target="_blank"><span class="label">linkedin</span></a>LinkedIn</li>
 								<li><a href="https://gaozhiyan.wordpress.com/contact-me/" class="icon fa-envelope-o" target="_blank"><span class="label">Email</span></a>Contact Me</li>
 							</ul>
