--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<nav>
 							<ul>
                      
-								<li><a href="http://gaozhiyan.wordpress.com" class="icon fa-wordpress" target="_blank"><span class="label">Blog</span></a></li>
+								<li><a href="http://gaozhiyan.wordpress.com" class="icon fa-wordpress" target="_blank"><span class="copyright"></span></a>Blog</li>
 								<li><a href="https://drive.google.com/file/d/0B1bQr5XDSLRSa29tN05JakhLems/view?usp=sharing" class="icon fa-file-pdf-o" target="_blank"><span class="label"></span></a>CV</li>
                                 				<li><a href="#" class="icon fa-bar-chart-o"></a><h2>Projects</h2></li>
 								<li><a href="https://www.linkedin.com/pub/zhiyan-gao/18/aa9/7bb" class="icon fa-linkedin" target="_blank"><span class="label">linkedin</span></a>LinkedIn</li>
