--- a/index.html
+++ b/index.html
@@ -34,6 +34,31 @@
 								<li><a href="https://gaozhiyan.wordpress.com/contact-me/" class="icon fa-envelope-o" target="_blank"><span class="label">Email</span></a>Contact Me</li>
 							</ul>
 						</nav>
+                        <!-- main wavesurfer.js lib -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.2.3/wavesurfer.min.js"></script>
+
+<div id="waveform"></div>
+
+<div style="text-align: center">
+  <button class="btn btn-primary" onclick="wavesurfer.playPause()">
+    <i class="glyphicon glyphicon-play"></i>
+    Play
+  </button>
+
+  <p class="row">
+    <div class="col-xs-1">
+      <i class="glyphicon glyphicon-zoom-in"></i>
+    </div>
+
+    <div class="col-xs-10">
+      <input id="slider" type="range" min="1" max="200" value="1" style="width: 100%" />
+    </div>
+
+    <div class="col-xs-1">
+      <i class="glyphicon glyphicon-zoom-out"></i>
+    </div>
+  </p>
+</div>
 					</header>
 
 				<!-- Footer -->
@@ -48,6 +73,20 @@
 			window.onload = function() { document.body.className = ''; }
 			window.ontouchmove = function() { return false; }
 			window.onorientationchange = function() { document.body.scrollTop = 0; }
+            var wavesurfer = WaveSurfer.create({
+  container: '#waveform',
+  waveColor: 'red',
+  progressColor: 'purple'
+});
+
+wavesurfer.load('audio/gaozhiyan.mp3');
+
+var slider = document.querySelector('#slider');
+
+slider.oninput = function () {
+  var zoomLevel = Number(slider.value);
+  wavesurfer.zoom(zoomLevel);
+};
 		</script>
 	</body>
 </html>
