--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   progressColor: 'purple'
 });
 
-wavesurfer.load('audio/gaozhiyan.mp3');
+wavesurfer.load('https://gaozhiyan.github.io/audio/gaozhiyan.mp3');
 
 var slider = document.querySelector('#slider');
 
