--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
                                 </li>
 								<li>
                                     <div class="tooltip">
-                                        <a href="docs/zgao_cv_2016.pdf" class="icon fa-file-pdf-o" target="_blank"></a>
+                                        <a href="https://gaozhiyan.github.io/docs/zgao_cv_2016.pdf" class="icon fa-file-pdf-o" target="_blank"></a>
                                         <span class="tooltiptext">CV</span>
                                     </div>
                                 </li>
                                 <li>
                                     <div class="tooltip">
-                                    <a href="https://www.linkedin.com/pub/zhiyan-gao/18/aa9/7bb" class="icon fa-linkedin" target="_blank"></a>
-                                        <span class="tooltiptext">linkedin</span>
+                                    <a href="https://twitter.com/GaoZhiyan/" class="icon fa-twitter" target="_blank"></a>
+                                        <span class="tooltiptext">twitter</span>
                                     </div>
                                 </li>
 								<li> 
