--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             container: '#waveform', 
             waveColor: 'purple' 
         });
-wavesurfer.load('https://gaozhiyan.github.io/audio/gaozhiyan.wav')
+wavesurfer.load('https://gaozhiyan.github.io/audio/gaozhiyan.mp3')
 
 	
         </script>
