--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@ wavesurfer.load('https://gaozhiyan.github.io/audio/gaozhiyan.mp3')
 
 	
         </script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?681bce949376a36ee96ee3004d983309";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
 	</body>
 </html>
