--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                                         <span class="tooltiptext">CV</span>
                                     </div>
                                 </li>
+								   <li>
+                                    <div class="tooltip">
+                                    <a href="https://gaozhiyan.github.io/docs/projects.html" class="icon fa-chart" target="_blank"></a>
+                                        <span class="tooltiptext">Projects</span>
+                                    </div>
+                                </li>
                                 <li>
                                     <div class="tooltip">
                                     <a href="https://twitter.com/GaoZhiyan/" class="icon fa-twitter" target="_blank"></a>
