--- a/index.html
+++ b/index.html
@@ -87,16 +87,11 @@
                                 </li>
 								   <li>
                                     <div class="tooltip">
-                                    <a href="https://gaozhiyan.github.io/docs/projects.html" class="icon fa-chart" target="_blank"></a>
+                                    <a href="https://gaozhiyan.github.io/docs/projects.html" class="icon fa-chart-bar" target="_blank"></a>
                                         <span class="tooltiptext">Projects</span>
                                     </div>
                                 </li>
-                                <li>
-                                    <div class="tooltip">
-                                    <a href="https://twitter.com/GaoZhiyan/" class="icon fa-twitter" target="_blank"></a>
-                                        <span class="tooltiptext">twitter</span>
-                                    </div>
-                                </li>
+                         
 								<li> 
                                     <div class="tooltip">
                                     <a href="https://gaozhiyan.wordpress.com/contact-me/" class="icon fa-envelope-o" target="_blank"></a>
