--- a/projects.html
+++ b/projects.html
@@ -149,7 +149,7 @@ $(document).ready(function () {
 <tr class="odd">
 <td><a href="https://gaozhiyan.shinyapps.io/ndl_calculator">NDL Calculator</a></td>
 <td><a href="http://www.phonetictranscriber.org/">Mass Transcribers</a></td>
-<td><a href="https://gaozhiyan.shinyapps.io//nantonghua">Nantong Chinese</a></td>
+<td><a href="https://nantonghua.shinyapps.io/nantonghua/">Nantong Chinese</a></td>
 </tr>
 </tbody>
 </table>
