--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Zhiyan Gao 高志晏</title>
+		<title>George Gao 高志晏</title>
 		<meta charset="utf-8" />
         <meta name="keywords" content="Zhiyan, Zhiyan Gao, 高志晏，Linguistics, George Mason,语言学，乔治梅森大学">
         <meta name="author" content="Zhiyan Gao">
@@ -22,7 +22,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<h1>Zhiyan Gao</h1>
+							<h1>George Gao</h1>
                             <h1 font-family="Microsoft YaHei">高志晏</h1>
 							
                             <!-- main wavesurfer.js lib -->
