--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 </li>
 								   <li>
                                     <div class="tooltip">
-                                    <a href="https://gaozhiyan.github.io/projects.html" class="icon fa-bar-chart-o" target="_blank"></a>
+                                    <a href="https://gaozhiyan.github.io/projects/" class="icon fa-bar-chart-o" target="_blank"></a>
                                         <span class="tooltiptext">Projects</span>
                                     </div>
                                 </li>
