--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 </li>
 								<li>
                                     <div class="tooltip">
-                                        <a href="https://gaozhiyan.github.io/docs/zgao_cv_2016.pdf" class="icon fa-file-pdf-o" target="_blank"></a>
+                                        <a href="https://gaozhiyan.github.io/docs/zgao_CV.pdf" class="icon fa-file-pdf-o" target="_blank"></a>
                                         <span class="tooltiptext">CV</span>
                                     </div>
                                 </li>
