--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<h1>George Gao</h1>
+							<h1>Zhiyan Gao PhD</h1>
                             <h1 font-family="Microsoft YaHei">高志晏</h1>
 							
                             <!-- main wavesurfer.js lib -->
@@ -68,7 +68,7 @@
    &#9655; Play | Pause
   </button>
 </p>
-<p>PhD Student &bull; Linguistics Program <br> George Mason University</p>
+<p>Language Expert &bull; AI-Lab <br> ByteDance Ltd.</p>
 						</header>
 						
 						<footer>
