修复选择题模式下一题按钮功能并调整按钮位置
- 在index.html的选择题区域添加了缺失的'下一题'按钮
- 为choice-controls容器添加CSS样式，调整按钮位置
- 修复了选择题模式下无法进入下一题的问题

--- a/vocab-practice/index.html
+++ b/vocab-practice/index.html
@@ -245,6 +245,9 @@
                         <div class="test-options" id="test-options">
                             <!-- 选项将通过JavaScript动态生成 -->
                         </div>
+                        <div class="choice-controls">
+                            <button class="btn btn-secondary" onclick="nextQuestion()" style="display:none;" id="next-btn">下一题</button>
+                        </div>
                         <div class="translation-container" id="translation-container" style="display:none;">
                             <!-- 答题区域 -->
                             <div class="answer-area">
